# i-am-not-a-trader-bot

./: .gitignore  README.md  STRATEGY.md  pyproject.toml
.context/compound-engineering/ce-code-review/20260716-062402-2b67dbe2/: SYNTHESIS.md  adversarial.json  cli-readiness.json  correctness.json  kieran-python.json  maintainability.json  metadata.json  performance.json  project-standards.json  reliability.json  security.json  testing.json
analytics/: report.py
config/: rulesets.yaml
docs/: nanoclaw-setup.md  phase2-runbook.md
docs/plans/: 2026-07-15-001-feat-evidence-gated-trading-system-plan.md
docs/superpowers/specs/: 2026-07-15-trading-system-design.md
engine/: config.py  control.py  evolution.py  executor.py  ledger.py  live_client.py  main.py  market_feed.py  risk.py  rulesets.py  signals.py
ops/: com.iamnotatrader.engine.plist  traderctl  verifier-precheck.sh
skills/trader/: SKILL.md
tests/: test_analytics.py  test_config.py  test_control.py  test_evolution.py  test_executor.py  test_ledger.py  test_live_client.py  test_main.py  test_market_feed.py  test_risk.py  test_rulesets.py  test_signals.py
tests/replay/: test_replay_loop.py
tests/replay/fixtures/: binance_ticker.json  clob_book.json  gamma_market.json  gamma_market_resolved.json  replay_ticks.json
